# cmake_tut

./: readme.txt
cmake-4.0.0-rc5-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-4.0.0-rc5-tutorial-source/Step1/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
